--- a/.github/workflows/cloudrun-spring.yml
+++ b/.github/workflows/cloudrun-spring.yml
@@ -1,8 +1,8 @@
-name: Build, Test and Deploy to Cloud Run
+name: Build, Test and Deploy to Cloud Run (Docker Image)
 
 on:
   push:
-    branches: ["main"]      # change if your default branch is different (e.g. "master")
+    branches: ["main"]      # change if your default branch is different
 
 permissions:
   contents: read
@@ -29,14 +29,36 @@ jobs:
       - name: Build and test
         run: mvn -B verify
 
-      # 4) Authenticate to Google Cloud (uses your JSON key secret)
+      # 4) Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v3
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      # 5) Install gcloud CLI (needed for docker auth)
+      - name: Set up gcloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
           project_id: '${{ secrets.GCP_PROJECT_ID }}'
 
-      # 5) Deploy to Cloud Run from source (Cloud Build will use your Dockerfile)
+      # 6) Configure Docker to use gcloud as a credential helper for Artifact Registry
+      - name: Configure Docker for Artifact Registry
+        run: |
+          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
+
+      # 7) Build Docker image (using your Dockerfile)
+      - name: Build Docker image
+        run: |
+          docker build \
+            -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/github-actions-demo:${{ github.sha }} \
+            .
+
+      # 8) Push Docker image to Artifact Registry
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/github-actions-demo:${{ github.sha }}
+
+      # 9) Deploy to Cloud Run using the pushed image
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v3
@@ -44,8 +66,8 @@ jobs:
           project_id: '${{ secrets.GCP_PROJECT_ID }}'
           region: '${{ secrets.GCP_REGION }}'
           service: '${{ secrets.CLOUD_RUN_SERVICE }}'
-          source: '.'          # Build container image from source + Dockerfile in GCP
+          image: '${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/github-actions-demo:${{ github.sha }}'
 
-      # 6) Show the deployed URL in logs
+      # 10) Show the deployed URL
       - name: Show URL
         run: 'echo "Service URL: ${{ steps.deploy.outputs.url }}"'
